Fixed favorites icon align

--- a/src/app/modules/admin-clients/components/admin-clients/admin-clients.component.less
+++ b/src/app/modules/admin-clients/components/admin-clients/admin-clients.component.less
@@ -4,6 +4,7 @@
   :host {
     td, th {
       &.favorites {
+        text-align: center !important;
         &.active {
           .anticon {
             color: orange;
